# Godrick

./: CMakeLists.txt  README.md  conanfile.txt  data.json  pytest.ini  requirements.txt  run_cmake_osx.sh  run_cmake_script.sh  setup.py  version.cmake
.github/workflows/: ci.yml  coverage.yaml  cppcoverage.yml
config/: CMakeLists.txt  GodrickConfig.cmake.in  godrick_define_targets.cmake
data/tests/: singlehost.txt  triplehost.txt
examples/: CMakeLists.txt
examples/mpibroadcast/: CMakeLists.txt  simplempi_ports_workflow.py
examples/mpipartialbcastgather/: CMakeLists.txt  receive.cpp  send.cpp  simplempi_partial_bcast_workflow.py  simplempi_partial_gather_workflow.py
examples/simplempi/: CMakeLists.txt  dummytask.cpp  simplempi_ports_workflow.py  simplempi_workflow.py
examples/zmqpubsub/: CMakeLists.txt  receive.cpp  send.cpp  zmq_pubsub_workflow.py
examples/zmqpushpull/: CMakeLists.txt  receive.cpp  send.cpp  zmq_pushpull_workflow.py
htmlcov/: class_index.html  d_4fa90106c9e7526b_communicator_py.html  d_4fa90106c9e7526b_computeResources_py.html  d_4fa90106c9e7526b_launcher_py.html  d_4fa90106c9e7526b_port_py.html  d_4fa90106c9e7526b_task_py.html  d_4fa90106c9e7526b_workflow_py.html  function_index.html  index.html  status.json  z_4fa90106c9e7526b_communicator_py.html  z_4fa90106c9e7526b_computeResources_py.html  z_4fa90106c9e7526b_launcher_py.html  z_4fa90106c9e7526b_port_py.html  z_4fa90106c9e7526b_task_py.html  z_4fa90106c9e7526b_workflow_py.html
include/godrick/: communicator.h  communicatorFactory.h  godrick.h  messageUtils.h  port.h
include/godrick/mpi/: broadcastMPI.h  communicatorMPI.h  godrickMPI.h  partialBcastGatherMPI.h  protocolImplMPI.h  utilsMPI.h
include/godrick/zmq/: communicatorZMQ.h
python/godrick/: communicator.py  computeResources.py  launcher.py  port.py  task.py  workflow.py
src/: CMakeLists.txt  communicator.cpp  communicatorFactory.cpp  godrick.cpp  messageUtils.cpp  port.cpp
src/mpi/: CMakeLists.txt  broadcastMPI.cpp  communicatorMPI.cpp  godrickMPI.cpp  partialBcastGatherMPI.cpp  utilsMPI.cpp
src/zmq/: CMakeLists.txt  communicatorZMQ.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  catch-main-mpi.cpp  unit-mpicomm-broadcast.cpp  unit-mpicomm-partial-bcast.cpp  unit-mpicomm-partial-gather.cpp  unit-ports.cpp  unit-zmqcomm-json-manual-pushpull.cpp  unit-zmqcomm-json-pushpull.cpp  unit-zmqcomm-pubsub.cpp  unit-zmqcomm-pushpull-nowait.cpp  unit-zmqcomm-pushpull.cpp
tests/cpp/data/: config.MPIBroadcastWorkflow.json  config.MPIPartialBcastWorkflow.json  config.MPIPartialGatherWorkflow.json  config.ZMQJSONPushPullWorkflow.json  config.ZMQPubSubWorkflow.json  config.ZMQPushPullWorkflow.json  config.ZMQPushPullWorkflowNoWait.json
tests/python/: test_communicator.py  test_computeResources.py  test_workflow.py  test_zmqcommunicator.py  test_zmqexternalgate.py  test_zmqgate.py
